feat: add clan bot endpoints
